src/test/deca/syntax/invalid/parser/int.deca
// Description:
//    Test invalide du parseur.
//
// Resultats:
//    erreur ligne 7

01
